@@ -1,3 +1,10 @@
+2002-03-06  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/move_resize.c (moveLoop):
+	(resize_window):
+	* fvwm/virtual.c (HandlePaging):
+	moving/resizing windows opaque is much faster
+
 2002-03-05  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/add_window.c (resize_resize_handle_windows):
